# ntropy-cookie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cookie/: discord_bot.py  get_transactions.py  main.py  ntropy.py  openai.py  prompts.py  transaction_formatting.py  transactions.py  user_store.py
